force-app/main/default/objects/PdfTemplate__c/PdfTemplate__c.object-meta.xml
<CustomObject>
    <label>PDF Template</label>
    <nameField>
        <label>PDF Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>