force-app/main/default/objects/PdfTemplate__c/fields/CCEmailAddresses__c.field-meta.xml
<CustomField>
    <fullName>CCEmailAddresses__c</fullName>
    <label>CC Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>