force-app/main/default/objects/PdfTemplate__c/fields/CourseCategory__c.field-meta.xml
<CustomField>
    <fullName>CourseCategory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course Category</label>
    <referenceTo>Course_Categorty__c</referenceTo>
    <relationshipLabel>PDF Templates</relationshipLabel>
    <relationshipName>PDFTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>