force-app/main/default/objects/PdfTemplate__c/fields/HTMLContent__c.field-meta.xml
<CustomField>
    <fullName>HTMLContent__c</fullName>
    <label>HTML Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>