force-app/main/default/objects/PdfTemplate__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>PCCompletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>